# smart-grid-cpn-wsn-based-model

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  out.txt
app/: main.cpp
docs/: report.md  report_20230421.md
lib/: CMakeLists.txt
lib/sgrid/: Grid.cpp  Grid.h  Outcome.cpp  Outcome.h  Percentage.cpp  Percentage.h  Power.cpp  Power.h  PowerSystem.cpp  PowerSystem.h  PowerSystemState.cpp  PowerSystemState.h  State.cpp  State.h  StateExplorer.cpp  StateExplorer.h  TransmissionLine.cpp  TransmissionLine.h  TransmissionLineState.cpp  TransmissionLineState.h  Types.h  format.h  types.h  utils.cpp  utils.h
libsgrid/: CMakeLists.txt
libsgrid/libsgrid/: Grid.cpp  Grid.h  Percentage.cpp  Percentage.h  Power.cpp  Power.h  PowerSystem.cpp  PowerSystem.h  PowerSystemState.cpp  PowerSystemState.h  State.cpp  State.h  StateExplorer.cpp  StateExplorer.h  TransmissionLine.cpp  TransmissionLine.h  Types.h  utils.cpp  utils.h
src/: CMakeLists.txt  CMakelists.txt  Carrier.cpp  Carrier.h  CarrierState.cpp  CarrierState.h  CircuitBreaker.cpp  CircuitBreaker.h  Grid.cpp  Grid.h  Percentage.cpp  Percentage.h  Power.cpp  Power.h  PowerSystem.cpp  PowerSystem.h  PowerSystemState.cpp  PowerSystemState.h  State.cpp  State.h  StateExplorer.cpp  StateExplorer.h  TransmissionLine.cpp  TransmissionLine.h  Types.h  main.cpp  utils.cpp  utils.h
tests/: CaseStudy.cpp  MinFulfilled.cpp  TransmissionLine.cpp  correctness.cpp  main.cpp
tools/: test_generator.py
